--- a/public/styleAdmin.css
+++ b/public/styleAdmin.css
@@ -1,25 +1,51 @@
-body>table {
-    width: 100%;
-}
-
-table {
+.list {
     border-collapse: collapse;
 }
 
-table.list {
-    width: 100%;
-}
-
-td,
-th {
-    border: 1px solid #dddddd;
+td {
+    border: 1px solid black;
     text-align: left;
     padding: 8px;
 }
 
-tr:nth-child(even),
-table.list thead>tr {
-    background-color: #dddddd;
+#editBtn {
+    color: blue;
+    cursor: pointer;
+    text-decoration: underline;
+    margin-right: 4px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.col-4 {
+    border: 1px solid black;
+}
+
+#delBtn {
+    color: red;
+    cursor: pointer;
+    text-decoration: underline;
+    margin-right: 4px;
+}
+
+table {
+    width: 100%;
+    border: 1px solid black;
+}
+
+th {
+    height: 50px;
+    text-align: left;
+    border: 1px solid black;
+    background-color: #4CAF50;
+    color: white;
+    padding: 8px;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
 }
 
 input[type=text],
@@ -47,20 +73,4 @@ input[type=submit] {
 
 form div.form-action-buttons {
     text-align: right;
-}
-
-a {
-    cursor: pointer;
-    text-decoration: underline;
-    color: #0000ee;
-    margin-right: 4px;
-}
-
-label.validation-error {
-    color: red;
-    margin-left: 5px;
-}
-
-.hide {
-    display: none;
 }
